--- a/.github/workflows/daily-water-report.yml
+++ b/.github/workflows/daily-water-report.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ./src
-          pip install -r requirements.txt || true  # If you have a req file
+          pip install -e .  # this installs from the root pyproject.toml
 
       - name: Run water report
         env:
