add wind to forecasts

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
 # .ENV Template File
 
 # Email configuration
+EMAIL_SENDER = "sender@gmail.com"
+EMAIL_RECIPIENT = "recipient@gmail.com"
 EMAIL_PASSWORD=app-password
