--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,11 @@
 # .ENV Template File
 
+# Location for Wind
+LONGITUDE=-74.2
+LATITUDE=39.5
+
 # Email configuration
-EMAIL_SENDER = "sender@gmail.com"
-EMAIL_RECIPIENT = "recipient@gmail.com"
+EMAIL_SENDER=sender@gmail.com
 EMAIL_PASSWORD=app-password
+EMAIL_RECIPIENT=recipient@gmail.com
+BCC_RECIPIENTS=friend1@example.com,friend2@example.com,friend3@example.com
