--- a/.env.template
+++ b/.env.template
@@ -9,4 +9,4 @@ EMAIL_SENDER=sender@gmail.com
 EMAIL_PASSWORD=app-password
 EMAIL_RECIPIENT=recipient@gmail.com
 BCC_RECIPIENTS=friend1@example.com,friend2@example.com,friend3@example.com
-TEST_BCC_RECIPIENTS=benelli_nick@gmail.com,nickbenelliwork@gmail.com
+TEST_BCC_RECIPIENTS=friend1@example.com,friend2@example.com
