--- a/.env.template
+++ b/.env.template
@@ -8,5 +8,9 @@ LATITUDE=39.5
 EMAIL_SENDER=sender@gmail.com
 EMAIL_PASSWORD=app-password
 EMAIL_RECIPIENT=recipient@gmail.com
-BCC_RECIPIENTS=friend1@example.com,friend2@example.com,friend3@example.com
+# BCC_RECIPIENTS=friend1@example.com,friend2@example.com,friend3@example.com
 TEST_BCC_RECIPIENTS=friend1@example.com,friend2@example.com
+
+# BCC GitHub Gist URL for recipients
+# Replace USERID and KEY with your GitHub username and Gist key
+BCC_URL=https://gist.githubusercontent.com/USERID/KEY/raw/lbi-ocean-bcc-recipient-email.txt
