--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "dotenv>=0.9.9",
     "ipykernel>=6.29.5",
     "pandas>=2.3.0",
+    "pytest>=8.4.1",
+    "python-dotenv>=1.1.1",
+    "pyyaml>=6.0.2",
     "requests>=2.32.4",
 ]
 
