Update workflow to use BCC_URL secret
Replaces the BCC_RECIPIENTS secret with BCC_URL in the daily-water-report GitHub Actions workflow. The previous BCC_RECIPIENTS line is now commented out.

--- a/.github/workflows/daily-water-report.yml
+++ b/.github/workflows/daily-water-report.yml
@@ -29,6 +29,7 @@ jobs:
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           EMAIL_RECIPIENT: ${{ secrets.EMAIL_RECIPIENT }}
-          BCC_RECIPIENTS: ${{ secrets.BCC_RECIPIENTS }}
+          # BCC_RECIPIENTS: ${{ secrets.BCC_RECIPIENTS }}
+          BCC_URL: ${{ secrets.BCC_URL }}
         run: |
           python -m lbi_surf.main
