Refactor test recipients and clean up notebooks
Renamed TEST_BCC_RECIPIENTS to TEST_RECIPIENTS in .env.template and updated config.yaml accordingly. Deleted example notebooks ocean-example1.ipynb and wind-example1.ipynb. Updated run.ipynb to disable email sending and improved output formatting. Simplified test.ipynb to a markdown cell for developer testing context.

--- a/.env.template
+++ b/.env.template
@@ -9,7 +9,8 @@ EMAIL_SENDER=sender@gmail.com
 EMAIL_PASSWORD=app-password
 EMAIL_RECIPIENT=recipient@gmail.com
 # BCC_RECIPIENTS=friend1@example.com,friend2@example.com,friend3@example.com
-TEST_BCC_RECIPIENTS=friend1@example.com,friend2@example.com
+# Test BCC recipients
+TEST_RECIPIENTS=friend1@example.com,friend2@example.com
 
 # BCC GitHub Gist URL for recipients
 # Replace USERID and KEY with your GitHub username and Gist key
