--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ email:
   sender: ${EMAIL_SENDER}
   password: ${EMAIL_PASSWORD}
   recipient: ${EMAIL_RECIPIENT}
-  test_recipient: ${TEST_BCC_RECIPIENTS} # Optional for testing
+  test_recipients: ${TEST_RECIPIENTS} # Optional for testing
 
 # Location Coordinates
 location:
