Refactor recipient Gist URL handling and test mode logic
Replaces BCC_URL with RECIP_GIST_URL and RECIP_GIST_TEST_URL in .env.template and config.py. Refactors address_fetcher.py and main.py to select the correct Gist URL for recipients based on test mode, removing redundant test recipient logic from main.py. Updates notebook output to reflect new recipient list.

--- a/.env.template
+++ b/.env.template
@@ -14,4 +14,5 @@ TEST_RECIPIENTS=friend1@example.com,friend2@example.com
 
 # BCC GitHub Gist URL for recipients
 # Replace USERID and KEY with your GitHub username and Gist key
-BCC_URL=https://gist.githubusercontent.com/USERID/KEY/raw/lbi-ocean-bcc-recipient-email.txt
+RECIP_GIST_URL=https://gist.githubusercontent.com/USERID/KEY/raw/lbi-ocean-bcc-recipient-email.txt
+RECIP_GIST_TEST_URL=https://gist.githubusercontent.com/USERID/KEY/raw/lbi-ocean-test-recipients.txt
