--- a/.github/workflows/test-daily-water-report.yml
+++ b/.github/workflows/test-daily-water-report.yml
@@ -31,7 +31,7 @@ jobs:
           LONGITUDE: ${{ secrets.LONGITUDE }}
           LATITUDE: ${{ secrets.LATITUDE }}
           RECIPIENTS_GIST_URL: ${{ secrets.RECIPIENTS_GIST_URL }}
-          TEST_RECIPIENTS_GIST_URL: ${{ secrets.TEST_RECIPIENTS_G
+          TEST_RECIPIENTS_GIST_URL: ${{ secrets.TEST_RECIPIENTS_GIST_URL }}
 
         run: |
           python -c "import lbi_surf; lbi_surf.hello(); lbi_surf.main(run_email=True, test=True)"
