Refactor email recipient config and add NOAA/OpenMeteo tests
Replaces EMAIL_RECIPIENT with EMAIL_RECIPIENTS throughout environment, config, and code to support multiple recipients. Updates related tests and workflow files. Adds new tests for NOAA data and OpenMeteo wind data fetching, improving test coverage for external API integrations.

--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,7 @@ LATITUDE=39.5
 # Email configuration
 EMAIL_SENDER=sender@gmail.com
 EMAIL_PASSWORD=app-password
-EMAIL_RECIPIENT=recipient@gmail.com
+EMAIL_RECIPIENTS=recipient1@gmail.com,recipient2@gmail.com
 # BCC_RECIPIENTS=friend1@example.com,friend2@example.com,friend3@example.com
 # Test BCC recipients
 TEST_RECIPIENTS=friend1@example.com,friend2@example.com
