Rename lbi_surf to ocean_report and update config
Renamed the package and all source files from lbi_surf to ocean_report throughout the codebase, including imports, scripts, and workflow references. Updated configuration to support beach orientation degrees, revised the LICENSE to a non-commercial variant, and improved documentation in README. Adjusted tests, scripts, and notebook to use the new package name and configuration.

--- a/.github/workflows/daily-water-report.yml
+++ b/.github/workflows/daily-water-report.yml
@@ -36,4 +36,4 @@ jobs:
           RECIPIENTS_GIST_URL: ${{ secrets.RECIPIENTS_GIST_URL }}
           TEST_RECIPIENTS_GIST_URL: ${{ secrets.TEST_RECIPIENTS_GIST_URL }}
         run: |
-          python -m lbi_surf.main
+          python -m ocean_report.main
