--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,7 @@
 # Location for Wind
 LONGITUDE=-74.2
 LATITUDE=39.5
+BEACH_ORIENTATION_DEGREES=140  # Approximate orientation of beach in degrees
 
 # Email configuration
 EMAIL_SENDER=sender@gmail.com
