Update workflow env vars and enhance README setup info
Added BEACH_ORIENTATION_DEGREES to GitHub Actions workflows with a default value. Expanded the README with more detailed environment variable and secret setup instructions, updated the project structure, and added a contact section. Updated notebook output to reflect recent run results.

--- a/.github/workflows/daily-water-report.yml
+++ b/.github/workflows/daily-water-report.yml
@@ -35,5 +35,6 @@ jobs:
           LATITUDE: ${{ secrets.LATITUDE }}
           RECIPIENTS_GIST_URL: ${{ secrets.RECIPIENTS_GIST_URL }}
           TEST_RECIPIENTS_GIST_URL: ${{ secrets.TEST_RECIPIENTS_GIST_URL }}
+          BEACH_ORIENTATION_DEGREES: ${{ secrets.BEACH_ORIENTATION_DEGREES || '140' }} # Default to 0 if not set
         run: |
           python -m ocean_report.main
