Add offseason recipient support and refactor config
Introduces OFFSEASON_RECIPIENTS_GIST_URL to support different recipient lists for offseason and summer. Updates .env.template, config.yaml, and config.py to use a unified config structure for recipient URLs. Refactors address_fetcher.py to select the appropriate recipient list based on the current month. Adds the 'datetime' dependency for month detection.

--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,10 @@ email:
   password: ${EMAIL_PASSWORD}
   recipients: ${EMAIL_RECIPIENTS}
   test_recipients: ${TEST_RECIPIENTS} # Optional for testing
+  recipient_urls:
+    main: ${RECIPIENTS_GIST_URL}
+    test: ${TEST_RECIPIENTS_GIST_URL}
+    offseason: ${OFFSEASON_RECIPIENTS_GIST_URL}
 
 # Location Coordinates
 location:
