--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "datetime>=5.5",
     "dotenv>=0.9.9",
     "ipykernel>=6.29.5",
     "pandas>=2.3.0",
