Add script control variables and improve notebook usage
Introduced RUN_EMAIL and TEST variables to .env.template for better script control. Updated run.ipynb to use these variables and improved code structure for running the report. Cleared test.ipynb code cell for future use. Added startup print and log messages in main.py for clearer process initiation.

--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,12 @@ LONGITUDE=-74.2
 LATITUDE=39.5
 BEACH_ORIENTATION_DEGREES=140  # Approximate orientation of beach in degrees
 
+# Control variables for your script
+# - RUN_EMAIL - set to "false" if you want to skip sending email
+# - TEST - set to "false" to run in normal mode
+RUN_EMAIL="true"
+TEST="true"
+
 # Email configuration
 EMAIL_SENDER=sender@gmail.com
 EMAIL_PASSWORD=app-password
