Update report execution and logging behavior
Set TEST to false in workflow to run in normal mode. Updated notebook to call run_report instead of main. Enhanced logging in run_report to log email sending status and when email content is printed to console.

--- a/.github/workflows/daily-water-report.yml
+++ b/.github/workflows/daily-water-report.yml
@@ -48,7 +48,7 @@ jobs:
 
           # Control variables for your script
           RUN_EMAIL: "true"  # set to "false" if you want to skip sending email
-          TEST: "true"       # set to "false" to run in normal mode
+          TEST: "false"       # set to "false" to run in normal mode
 
         run: |
           # python -m ocean_report.main
