Add dynamic summer date calculation and config options
Introduced functions to calculate Memorial Day and Labor Day, and a utility to determine if a date is within the summer season based on configurable offsets. Updated config.yaml and config.py to allow setting summer start and end offsets. Refactored address_fetcher.py to use the new summer logic instead of hardcoded months.

--- a/config.yaml
+++ b/config.yaml
@@ -21,3 +21,8 @@ location:
   longitude: ${LONGITUDE}
   latitude: ${LATITUDE}
   beach_orientation_degrees: 140 # ${BEACH_ORIENTATION_DEGREES}
+
+# Deterimine Summertime
+summer:
+  memorial_day_offset: -4   # days before Memorial Day (negative = before, positive = after)
+  labor_day_offset: 7       # days after Labor Day
